add ocserv group api
